2011-10-14 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Update the mod1 for 4.3< versions
	* Add a query to flush errors log
2011-10-07 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Fix for TYPO3 4.6 compatibility
2011-10-04 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Add a new report : check your websites/domains/baseURL configuration
	* Fix the pagebrowser in errors log
2011-08-30 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* In plugin list view, you can now switch into the list or page module
	* In "List of used content types" & "List of used plugins", do not display offline pages
	* In "List of used content types" & "List of used plugins", add first domain record
2011-08-16 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Small bugfix in the ExtDirect reports
2011-08-15 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Add the PHP errors log
	* Change the extensions reports
	* In the extensions reports, add the possibility to check in the emconf if the extension is declared compatible with the current TYPO3 version
2011-07-27 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Add realurl errors log
2011-06-17 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Do not display standard page link with TemplaVoilà
2011-05-25 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Small bugfixes
	* Complete refactoring
	* Add a support for version lower than 4.3 (with a module instead of reports)
2011-05-10 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Now compare the local version of a file to the same TER version (before it was the last version)
	* Ignore blank spaces in diff (-b option)
2011-05-08 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Update some labels
	* Bug on a label in plugins mode
 	* Add a german version (thanks to Stefan Galinski)
2011-05-06 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* In extension list mode, add a shadowbox to the db part
	* Add a ExtDirect list module (in 4.5>= only)
2011-04-13 CERDAN Yohann <cerdanyohann@yahoo.fr>
    * In plugins and contents list, add the possibility to show hidden pages/contents